src/popup/components/Authentication/UpgradeScreen/upgrade-screen.pcss
.upgrade-screen {
    flex: 1 1 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 56px 0 30px;
    height: 100%;
    background: var(--blue-gradient);

    &__image {
        width: 78%;
    }

    &__head {
        padding-bottom: 70px;
    }

    &__title {
        font-size: 32px;
        line-height: 36px;
        font-weight: bold;
        margin: 0 auto;
        text-align: center;
    }

    &__slider {
        width: 100%;
        max-width: 320px;
        padding: 0 16px;
    }

    &__desc {
        font-size: 16px;
        text-align: center;
        line-height: 22px;
    }

    &__info {
        display: flex;
        flex-direction: column;
        margin: 0 0 30px 20px;
    }

    &__benefit {
        display: block;
        position: relative;
        align-items: center;
        margin-bottom: 5px;

        &:before {
            content: "";
            display: inline-block;
            height: 8px;
            width: 12px;
            position: absolute;
            left: -20px;
            top: 6px;
            border: solid var(--green700);
            border-width: 0 0 2px 2px;
            transform: rotate(-45deg);
        }
    }

    &__continue-button {
        font-size: 1.35rem;
        text-align: center;
        text-transform: none;
        color: var(--gray88);
        cursor: pointer;
        background: none;
        border: none;
        margin-top: 19px;
    }

    &__actions {
        flex: 1 1 auto;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
    }

    & .slider__indicator {
        bottom: 0;
    }
}

